QUED-189 fixed viewer + copyright spacing and classes and added copyright symbol.

--- a/edition-archive-frontend/assets/scss/_content-lod.scss
+++ b/edition-archive-frontend/assets/scss/_content-lod.scss
@@ -14,13 +14,6 @@
         margin-right: 0.1rem;
       }
     }
-    &__copyrights {
-      margin-top: .5rem;
-      &--images {
-        text-align: right;
-        margin-bottom: 3rem;
-      }
-    }
   }
 
   .lod-document-translations {
